agent历史记录，但是有oom风险
